[package]
name = "bebop-compiler"
version = "0.1.0"
edition = "2024"

[dependencies]
bebop-util = { path = "../util" }
bebop-parser = { path = "../parser" }
internment = { version = "0.8", features = ["serde"] }
serde = { version = "1", features = ["derive", "rc"] }
ariadne = "0.5.1"
thiserror = "2.0.12"
ordermap = { version = "0.5.8", features = ["serde"] }
bitflags = { version = "2.9.1", features = ["std", "serde"] }

[dev-dependencies]
insta = { version = "1.43.1", features = ["ron"] }
