[package]
name = "bebop-parser"
version = "0.1.0"
edition = "2024"

[dependencies]
bebop-util = { path = "../util" }
internment = { version = "0.8", features = ["serde"]}
logos = { version = "0.15"}
serde = { version = "1", features = ["derive"] }
ron = "0.8"
ariadne = "0.5.1"
thiserror = "2.0.12"
lalrpop = "0.22"
lalrpop-util = "0.22"
num-traits = "0.2.19"
lazy_static = "1.5.0"

[build-dependencies]
lalrpop = "0.22"

[dev-dependencies]
insta = {version = "1.43.1", features = ["ron"]}
