[package]
name = "bebop_sleigh"
version = "0.1.0"
edition = "2024"

[dependencies]
internment = "0.8"
logos = { version = "0.15"}
codespan = "0.12"
codespan-reporting = "0.12"
serde = { version = "1", features = ["derive"] }
ron = "0.8"

[build-dependencies]
lalrpop = "0.22"

[dev-dependencies]
insta = {version = "1.43.1", features = ["ron"]}
