[package]
name = "bebop_sleigh"
version = "0.1.0"
edition = "2024"

[dependencies]
internment = { version = "0.8", features = ["serde"]}
logos = { version = "0.15"}
serde = { version = "1", features = ["derive"] }
ron = "0.8"
ariadne = "0.5.1"
thiserror = "2.0.12"
lalrpop = "0.22"
lalrpop-util = "0.22"

[build-dependencies]
lalrpop = "0.22"

[dev-dependencies]
insta = {version = "1.43.1", features = ["ron"]}
